[package]
name = "fuso-socks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
env_logger = "0.9.0"
smol = {version = "1.2.5"}

[dependencies]
log = {version = "0.4.14"}
futures = "0.3"
bytes = {version = "1.1.0"}
async-trait = {version = "0.1.51"}